# NetPulse-Web

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  OPencodePrompt.md  Ping回退机制方案.md  README.md  VideoEngine-重构设计文档.md  WebsiteEngine-重构设计文档.md  docker-compose.yml  nginx.conf  test-100-per-type.txt  视频测试引擎方案.md
backend/: Cargo.toml  config.toml
backend/src/: main.rs
backend/src/api/: admin.rs  auth.rs  metrics.rs  mod.rs  plan.rs  task.rs  ws.rs
backend/src/config/: mod.rs
backend/src/database/: mod.rs
backend/src/engines/: mod.rs
backend/src/engines/browser/: collectors.rs  mod.rs  provider.rs
backend/src/engines/dns/: mod.rs
backend/src/engines/download/: mod.rs
backend/src/engines/http/: mod.rs
backend/src/engines/ping/: mod.rs
backend/src/engines/video/: browser.rs  cdp_handler.rs  collector.rs  diagnostics.rs  events.rs  mod.rs  monitor.rs  playback.rs
backend/src/engines/video/cdp/: media.rs  mod.rs  network.rs  page.rs  performance.rs  runtime.rs
backend/src/engines/video/hooks/: media_element.rs  media_source.rs  mod.rs  mutation.rs  network_api.rs
backend/src/engines/video/metrics/: mod.rs
backend/src/engines/video/players/: bilibili.rs  generic.rs  mod.rs  registry.rs  (+1 more)
backend/src/models/: metrics.rs  mod.rs  plan.rs  setting.rs  task.rs  user.rs
backend/src/report/excel/: mod.rs
backend/src/scheduler/: mod.rs
backend/src/services/: auth_service.rs  mod.rs  plan_service.rs  task_service.rs
backend/src/storage/: mod.rs
backend/src/utils/: mod.rs  ratelimit.rs  response.rs  url.rs
backend/src/worker/: mod.rs
(+31 files in other folders)
