[package]
name = "netpulse-web"
version = "0.1.0"
edition = "2021"
description = "NetPulse Web - 网络质量测试平台"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# 配置
config = "0.14"
toml = "0.8"

# JWT
jsonwebtoken = "9"

# 密码哈希
bcrypt = "0.16"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
anyhow = "1"
thiserror = "1"

# 环境变量
dotenvy = "0.15"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# DNS 解析
hickory-resolver = "0.24"

# 浏览器 CDP
headless_chrome = "1.0"

# 并发控制 + 异步工具
tokio-util = "0.7"
futures = "0.3"

# URL 解析
url = "2"

# Excel 报表
rust_xlsxwriter = "0.79"
csv = "1.3"
